extend templates from base.html file

--- a/templates/finance/tax_index.html
+++ b/templates/finance/tax_index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🤓😎🥸🤩🥳😏</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}🤓😎🥸🤩🥳😏{% endblock title %}
+
+{% block body %}
     <h1>Tax Index</h1>
     <h3>Ruko zara, sabar karo, sab aega bhai, THORA SABAR!</h3>
     <h3>This webpage is in progress bro, check kari jae 🤓!</h3>
-</body>
-</html>
+{% endblock body %}
